@startuml
class Slide {
  - imageView : ImageView
  + getImageView()
}

class SlideCollection {
  - slides : Slide[]
  - size : int
  + addSlide(slide)
  + getSize()
  + getSlide(index)
  + createIterator()
}

class SlideIterator {
  - position : int
  - collection : SlideCollection
  + hasNext()
  + next()
  + reset()
}

class Controller
class AlbumApp

SlideCollection "1" o-- "*" Slide
SlideCollection --> SlideIterator : creates
Controller --> SlideIterator : uses
AlbumApp --> SlideCollection : creates
@enduml
